--- a/src/components/home_article/home_article.less
+++ b/src/components/home_article/home_article.less
@@ -36,6 +36,10 @@
 				span{
 					font-weight: lighter;
 				}
+				.delete{
+					color: @dfhc;
+					.mr(10);
+				}
 			}
 		}
 		.add_comments{
