--- a/src/components/home_login/home_login.less
+++ b/src/components/home_login/home_login.less
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .pt(100);
+    
     .form{
         .w(400);
     }
@@ -16,7 +18,7 @@
         padding: 20px 0;
     }
     .form{
-        .pt(100);
+        // .pt(100);
         // transform: translateY(-20px);
         input{
             background-color: white;
@@ -26,5 +28,13 @@
     button{
         .mb(10);
         .dbs;
+    }
+    .gorget{
+        color: white;
+        .fs(12);
+        text-decoration: underline;
+        cursor: pointer;
+        .tar;
+        padding: 0 10px;
     }
 }
