--- a/src/components/admin/admin.html
+++ b/src/components/admin/admin.html
@@ -5,6 +5,7 @@
             <li ng-click="newArticle()"><span>+</span> 新建文章</li>
             <li ui-sref=".label" ng-show="labelControl"><span>+</span> 标签管理</li>
             <li ui-sref=".list"><span>+</span> 我的文章</li>
+            <li ui-sref=".user"  ng-show="labelControl"><span>+</span> 用户管理</li>
         </ul>
     </div>
     <div class="admin_right" ui-view=""></div>
