--- a/src/components/admin_list/admin_list.html
+++ b/src/components/admin_list/admin_list.html
@@ -5,17 +5,44 @@
 				<span class="name">全部</span>
 				<span class="count" ng-bind="articleCount">(24)</span>
 			</li>
-			<li ng-repeat="item in categoryList"  class="{{search.type==item.code? 'active': ''}}" ng-click="selectType(item.code)" ng-if="item.count!=0">
+			<li ng-repeat="item in categoryList" class="{{search.type==item.code? 'active': ''}}" ng-click="selectType(item.code)" ng-if="item.count!=0">
 				<span class="name" ng-bind="item.name">javascript</span>
 				<span class="count" ng-bind="item.count">(12)</span>
 			</li>
 		</ul>
+		<div class="app_loading" ng-show="showLoading1">
+			<div class="content">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
 	</div>
-	<ul class="article_list">
-		<li ng-repeat="item in list" ng-click="showDetail(item)">
-			<span ng-bind="item.title" class="title" ui-sref="admin.article({id: item.id})"></span>
-			<span ng-bind="item.add_date" class="date"></span>
-			<button class="delete" ng-click="delete(item, $index)">删除</button>
-		</li>
-	</ul>
+	<div class="article_list">
+		<div class="app_loading" ng-show="showLoading2">
+			<div class="content">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+		<ul class="article_list" ng-hide="showLoading2">
+			<li ng-repeat="item in list" ng-click="showDetail(item)">
+				<span ng-bind="item.title" class="title" ui-sref="admin.article({id: item.id})"></span>
+				<span ng-bind="item.add_date" class="date"></span>
+				<button class="delete" ng-click="delete(item, $index)">删除</button>
+			</li>
+		</ul>
+	</div>
+
 </div>
