--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -1,7 +1,7 @@
 .homePage{
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     .menu_wrapper{
         flex-shrink: 0;
         background-color: white;
@@ -150,6 +150,7 @@
         }
     }
     .home_container{
+        min-height: 100%;
         flex-grow: 1;
         .pt(70);
         .pl(10);
