--- a/src/components/home_register/home_register.html
+++ b/src/components/home_register/home_register.html
@@ -2,18 +2,18 @@
 	<div class="form">
 		<h1 class="title">账号注册</h1>
 		<div class="form_group">
-			<span class="label">用户名</span>
-			<input type="text" ng-model="uname" placeholder="请设置您的登录用户名" ng-keyup="keyUp($event)">
+			<span class="label">邮箱</span>
+			<input type="text" ng-model="email" placeholder="邮箱将作为您的登录名使用" ng-keyup="keyUp($event)">
 		</div>
-		<!-- <div class="form_group">
-			<span class="label">手机号码</span>
-			<input type="text" ng-model="phone" placeholder="请输入您的手机号码" ng-keyup="keyUp($event)">
-		</div> -->
 		<div class="form_group">
-			<span class="label">密码</span>
+			<span class="label">新密码</span>
 			<input type="password" ng-model="passwd" placeholder="请设置您的登录密码" ng-keyup="keyUp($event)">
 		</div>
-		<button class="btn_default" ng-click="register()">注册</button>
+		<div class="vcode_group">
+			<input type="text" ng-model="vcode" placeholder="验证码" ng-keyup="keyUp($event)">
+			<button class="btn_default" ng-click="sendVcode()" ng-bind="sendLoading?'发送中...':'发送验证码'"></button>
+		</div>
+		<button class="btn_default" ng-click="register()" ng-bind="registerLoading?'注册中...':'注册'">注册</button>
 		<button class="btn_default" ui-sref="home.login">登录</button>
 	</div>
 	<div app-alert="" ng-show="alertVisiable"></div>
