--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -132,6 +132,8 @@
             }
             .user_name{
                 .mr(30);
+                cursor: pointer;
+                color: @dfhc;
             }
             .write{
                 background-color: @dfhc;
