--- a/src/components/admin_label/admin_label.less
+++ b/src/components/admin_label/admin_label.less
@@ -1,6 +1,6 @@
 .admin_label{
+    flex-grow: 1;
     background-color: white;
-    height: 100%;
     overflow-y: auto;
     .add{
         display: flex;
