--- a/src/components/admin_user/admin_user.html
+++ b/src/components/admin_user/admin_user.html
@@ -16,7 +16,7 @@
 		</ul>
 		<ul class="tbody list" ng-repeat="item in list">
 			<li>
-				<span ng-bind="item.id"></span>
+				<span ng-bind="$index+1"></span>
 			</li>
 			<li>
 				<span ng-bind="item.ni_name"></span>
