--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -12,7 +12,7 @@
         z-index: 10;
         .mb(10);
         align-items: center;
-        .dbs;
+        // .dbs;
         .control{
             .dn;
             padding: 0 10px;
