--- a/src/style/common.less
+++ b/src/style/common.less
@@ -269,10 +269,7 @@ textarea {
     .br(0);
     .mb(10);
     padding: 10px;
-    .br(2);
-    &:hover {
-        box-shadow: 2px 2px 4px fadeout(black, 60%);
-    }
+    // .br(2);
     .title {
         font-weight: bold;
         color: @dhc;
