--- a/src/components/admin_log/admin_log.less
+++ b/src/components/admin_log/admin_log.less
@@ -1,6 +1,5 @@
 .admin_log {
-    height: 100%;
-    flex-grow: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
     // .pt(10);
