--- a/src/components/admin_user/admin_user.less
+++ b/src/components/admin_user/admin_user.less
@@ -1,15 +1,14 @@
 .admin_user {
-    height: 100%;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    background-color: white;
-    // .pt(10);
-    .table{
-        .tbody{
-            li{
+    background-color: white; // .pt(10);
+    .table {
+        .tbody {
+            li {
                 .pt(10);
                 .pb(10);
+                .fs(12);
             }
         }
     }
