--- a/src/components/home_list/home_list.less
+++ b/src/components/home_list/home_list.less
@@ -8,11 +8,11 @@
         align-self: flex-start;
         flex-shrink: 0;
         .w(260);
-        .dbs;
+        // .dbs;
         background-color: white;
         padding: 10px;
         box-shadow: 2px 2px 4px fadeout(black, 60%);
-        .br(4);
+        // .br(4);
         ul {
             li {
                 display: flex;
@@ -56,7 +56,7 @@
             .t(0);
             .l(0);
             transition: all 0.2s linear;
-            .br(4);
+            // .br(4);
             .mr(10);
             overflow: hidden;
             .author span{
