--- a/src/components/admin_user/admin_user.html
+++ b/src/components/admin_user/admin_user.html
@@ -5,13 +5,13 @@
 			<li>用户名</li>
 			<li>所属组</li>
 			<li>注册时间</li>
-			<li>最后登录时间</li>
-			<li>发布文章权限</li>
-			<li>删除文章权限</li>
-			<li>添加标签权限</li>
-			<li>删除标签权限</li>
-			<li>发布评论权限</li>
-			<li>删除评论权限</li>
+			<li>最后登录</li>
+			<li>发布文章</li>
+			<li>删除文章</li>
+			<li>添加标签</li>
+			<li>删除标签</li>
+			<li>发布评论</li>
+			<li>删除评论</li>
 			<li>编辑</li>
 		</ul>
 		<ul class="tbody list" ng-repeat="item in list">
