修复文章发布后没有重置changed的bug，分开设置home.list 以及home.article的标题样式

--- a/src/components/home_list/home_list.less
+++ b/src/components/home_list/home_list.less
@@ -59,6 +59,9 @@
             .author span {
                 color: @dfhc;
             }
+            .title{
+                cursor: pointer;
+            }
             .article_content {
                 max-height: 320px; // background-color: @dlc;
                 color: fadeout(@dfc, 20%);
